# bad_variable_changer

./: Cargo.toml  LICENSE  Makefile  README.md  install_script.sh  language_patterns.rs  main.rs  modifyfile.rs
src/: main.rs  modifyFile.rs  modifyfile.rs
